Fix option handling

--- a/options.html
+++ b/options.html
@@ -5,13 +5,17 @@
     </head>
 
     <body>
-        <label>Generate filter for <input type="text" id="uri"></label>
-        <button id="generate">Generate</button>
-        <br>
-        <textarea id="filters"></textarea>
         <div>
+            <label>Generate filter for <input type="text" id="uri"></label>
+            <button id="generate">Generate</button>
+            <p id="gen-mesg"></p>
+        </div>
+        <br>
+        <div>
+            <textarea id="filters"></textarea>
             <button id="apply">Apply</button>
             <p id="mesg"></p>
+        </div>
     </body>
     <script src="options.js"></script>
 </html>
