Remove ad-removal feature
Use the element picker from uBlock Origin :)

--- a/options.html
+++ b/options.html
@@ -17,5 +17,5 @@
             <p id="mesg"></p>
         </div>
     </body>
-    <script src="options.js"></script>
+    <script src="js/options.js"></script>
 </html>
